Fixed bug: Table selection leaves white space around the image
I've removed background on figure and on cke_widget_wrapper_easyimage. Now it looks good.

--- a/plugins/easyimage/styles/easyimage.css
+++ b/plugins/easyimage/styles/easyimage.css
@@ -4,7 +4,6 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 */
 
 .easyimage, .cke_widget_wrapper_easyimage {
-	background-color: #fff;
 	border: none;
 	display: block;
 	padding: 0;
